aks/care-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: care-frontend
  name: care-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: care-frontend
  template:
    metadata:
      labels:
        app: care-frontend
    spec:
      containers:
        - name: care-frontend-inventory
          image: victoriafongacr.azurecr.io/care-frontend:v4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3030
