aks/care-user-medicine-inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: care-user-medicine-inventory-deployment
  labels:
    app: care-user-medicine-inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: care-user-medicine-inventory
  template:
    metadata:
      labels:
        app: care-user-medicine-inventory
    spec:
      containers:
        - name: care-user-medicine-inventory
          image: victoriafongacr.azurecr.io/care-user-medicine-inventory:v4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
