aks/care-frontend-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: care-frontend-tcp
spec:
  type: LoadBalancer
  selector:
    app: care-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3030
      nodePort: 30300
