aks/care-user-medicine-inventory-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: care-user-medicine-inventory-tcp
spec:
  type: NodePort
  selector:
    app: care-user-medicine-inventory
  ports:
    - protocol: TCP
      port: 80
