aks/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  ports:
    - name: "27017"
      protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: mongo
  type: ClusterIP
